Fixed login issue